fixed docker, docker-compose, for celery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       interval: 5s
       retries: 5
       timeout: 3s
+
   rabbitmq:
     image: "rabbitmq:3-management"
     container_name: task_flow-rabbitmq
@@ -41,16 +42,27 @@ services:
 
   celery:
     build: .
-    command: celery worker --app=task_flow.tasks
+    container_name: task_flow-celery
+    command: celery -A task_flow worker --loglevel=info
     volumes:
-      - .:/task_flow
-    links:
-      - rabbitmq:rabbit
+      - ./task_flow:/task_flow
+    depends_on:
+      - django
+      - rabbitmq
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+      - CELERY_RESULT_BACKEND=rpc://
 
   celery-beat:
     build: .
     container_name: task_flow-celery-beat
-    command: celery --app=task_flow.celery beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    command: celery -A task_flow beat --loglevel=info
+    volumes:
+      - ./task_flow:/task_flow
     depends_on:
       - django
       - rabbitmq
+      - celery
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+      - CELERY_RESULT_BACKEND=rpc://
