--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,17 @@ services:
     command: sh -c "cd /task_flow && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./task_flow:/task_flow
+      - backups:/backups  # Добавляем volume для бэкапов
     ports:
       - 8000:8000
     depends_on:
       db:
         condition: service_healthy
+    environment:
+      - DJANGO_SETTINGS_MODULE=task_flow.settings
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
 
   db:
     image: postgres:14
@@ -23,6 +29,8 @@ services:
       POSTGRES_PASSWORD: Nbveh1775
     ports:
       - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -43,26 +51,38 @@ services:
   celery:
     build: .
     container_name: task_flow-celery
-    command: celery -A task_flow worker --loglevel=info
+    command: celery -A task_flow worker --loglevel=info --pool=solo
     volumes:
       - ./task_flow:/task_flow
+      - backups:/backups  # Добавляем volume для бэкапов
     depends_on:
       - django
       - rabbitmq
     environment:
+      - DJANGO_SETTINGS_MODULE=task_flow.settings
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=rpc://
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
 
   celery-beat:
     build: .
     container_name: task_flow-celery-beat
-    command: celery -A task_flow beat --loglevel=info
+    command: celery -A task_flow beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - ./task_flow:/task_flow
+      - backups:/backups  # Добавляем volume для бэкапов
     depends_on:
       - django
       - rabbitmq
       - celery
     environment:
+      - DJANGO_SETTINGS_MODULE=task_flow.settings
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=rpc://
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+
+volumes:
+  postgres_data:
+  backups:  # Volume для хранения бэкапов
